# deploylane

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
deploylane/: __init__.py  auth.py  cli.py  config.py  deploylog.py  deployproof.py  deployspec.py  deploystate.py  gitlab.py  remote.py  stacks.py  utils.py  workspace.py  ymlvars.py
deploylane/commands/: _utils.py  auth.py  ci.py  deploy.py  projects.py  vars.py
deploylane/commands/workspace/: __init__.py  _utils.py  init.py
deploylane/providers/: __init__.py  base.py  github.py  gitlab.py
deploylane/scripts/: deploy.sh
deploylane/templates/: __init__.py  install.sh
deploylane/templates/compose/: bluegreen.yml  plain.yml
deploylane/templates/nginx/: sites-include.conf  upstream-blue.conf  upstream-green.conf
deploylane/templates/sudoers/: nginx-bg-switch
tests/: test_deploy.py  test_deployspec.py  test_vars_logic.py
