[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploylane"
version = "0.1.5"
description = "DeployLane - GitLab-focused deployment helper CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "typer>=0.12.0",
  "requests>=2.31.0",
  "tomli>=2.0.1; python_version<'3.11'",
  "pyyaml>=6.0",
]

[project.scripts]
dlane = "deploylane.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["deploylane*"]