[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deploylane"
version = "0.3.1"
description = "Deployment configs as code. GitLab CI variables as code. Reproducible deploys every time."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  {name = "Ahmet Atakan"},
]
keywords = [
  "devops", "deployment", "cli", "gitlab", "github-actions",
  "docker-compose", "ci-cd", "infrastructure", "blue-green",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "typer>=0.12.0",
  "requests>=2.31.0",
  "tomli>=2.0.1; python_version<'3.11'",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ahmetatakan/deploylane"
Repository = "https://github.com/ahmetatakan/deploylane"
"Bug Tracker" = "https://github.com/ahmetatakan/deploylane/issues"
Changelog = "https://github.com/ahmetatakan/deploylane/releases"

[project.scripts]
dlane = "deploylane.cli:app"

[project.optional-dependencies]
github = [
  "PyNaCl>=1.5.0",
]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "PyNaCl>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deploylane*"]

[tool.setuptools.package-data]
"deploylane" = [
  "scripts/*.sh",
  "templates/*.sh",
  "templates/compose/*.yml",
  "templates/nginx/*.conf",
  "templates/sudoers/*",
]
